hphp/test/slow/reified_generics/reified-return-type.php.expect
ERROR: Value returned from function f() must be of type @int, float given on line 15
ERROR: Value returned from function f() must be of type @int, bool given on line 15
ERROR: Value returned from function f() must be of type @bool, int given on line 15
ERROR: Value returned from function f() must be of type @shape('x' => int, 'y' => string), array given on line 15
ERROR: Value returned from function f() must be of type @(int, string), array given on line 15
